--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <p id="heading">Make decisions with data — no SQL required</p>
     </div>
 
-    <script type="text/html" src="./inline_js/init.js"></script>
+    <script type="text/javascript" src="./inline_js/init.js"></script>
   </body>
 </html>
