Use non-rolling gifs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div id="right-side">
-      <img src="inline_js/1.gif" id="animation" />
+      <img src="inline_js/1.gif" id="animation" class="animation" />
       <p id="heading">Make decisions with data — no SQL required</p>
     </div>
 
