--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div id="right-side">
       <img src="inline_js/1.gif" id="animation" class="animation" />
-      <p id="heading">Make decisions with data — no SQL required</p>
+      <p id="heading" class="heading">Make decisions with data — no SQL required</p>
     </div>
 
     <script type="text/javascript" src="./inline_js/init.js"></script>
