Use apng animations

--- a/index.html
+++ b/index.html
@@ -7,24 +7,12 @@
   </head>
 
   <body>
-    <div id="left-side">
-      <div id="left-container">
-        <h1>We’re setting up your Metabase!</h1>
-        <h2>
-          It usually takes around 5 minutes. If you already use Metabase, you’ll be able to migrate your instance to Cloud.
-        </h2>
-
-        <div id="status">
-          5 minutes remaining…
-        </div>
-        <progress id="progress" max="100" value="50"/>
-      </div>
+    <img src="inline_js/1.png" id="animation" class="animation" />
+    <p id="heading" class="heading">Make decisions with data — no SQL required</p>
+    <div id="status">
+      5 minutes remaining…
     </div>
-
-    <div id="right-side">
-      <img src="inline_js/1.gif" id="animation" class="animation" />
-      <p id="heading" class="heading">Make decisions with data — no SQL required</p>
-    </div>
+    <progress id="progress" max="100" value="50"/>
 
     <script type="text/javascript" src="./inline_js/init.js"></script>
   </body>
